--- a/top_worker/dune
+++ b/top_worker/dune
@@ -1,30 +1,9 @@
 (executable
- (name example)
- (preprocess
-  (pps js_of_ocaml-ppx))
- (modes js)
- (modules example)
- (libraries js_top_worker-client lwt js_of_ocaml))
-
-(executable
  (name worker)
  (modes byte)
  (modules worker)
  (link_flags (-linkall))
- (libraries js_top_worker-web logs.browser tyxml))
-
-(executable
- (name unix_worker)
- (public_name unix_worker)
- (modes byte)
- (modules unix_worker)
- (link_flags (-linkall))
- (libraries js_top_worker logs logs.fmt rpclib.core))
-
-(executable
- (name unix_client)
- (modules unix_client)
- (libraries js_top_worker-client rpclib.cmdliner))
+ (libraries js_top_worker-web))
 
 (rule
  (targets worker.js)
@@ -38,6 +17,7 @@
    --effects=cps
    +toplevel.js
    +dynlink.js
+   +bigstringaf/runtime.js
    stubs.js
    %{dep:worker.bc}
    -o
