--- a/frontend/dune
+++ b/frontend/dune
@@ -21,6 +21,7 @@
  (public_name odoc_notebook.frontend)
  (modes byte)
  (modules frontend)
+ (preprocess (pps ppx_deriving_yojson))
  (libraries
   code-mirror
   astring
