--- a/cli/dune
+++ b/cli/dune
@@ -3,6 +3,14 @@
  (public_name odoc_notebook)
  (preprocess
   (pps ppx_deriving_yojson))
+ (modules cmd_outputs html_page mk_backend mk_frontend notebook_css ocamlfind odoc_notebook odoc opam run util worker_pool)
+ (link_flags (-linkall))
+ (libraries cmdliner rpclib.json odoc.odoc bos mustache eio_main eio findlib opam-format js_top_worker-rpc logs logs.fmt ))
+
+(executable
+ (name odoc_notebook_test)
+ (public_name odoc_notebook_test)
  (modes byte)
+ (modules odoc_notebook_test)
  (link_flags (-linkall))
  (libraries cmdliner odoc_notebook_lib rpclib.json odoc.odoc))
