--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,7 @@
 {
     "ocaml.sandbox": {
         "kind": "opam",
-        "switch": "/Users/jon/devel/learno"
+        "switch": "5.2.0"
     },
     "files.exclude": {
         "**/*.vo": true,
